--- a/ai-snippet-service/package.json
+++ b/ai-snippet-service/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:css": "tailwindcss -i ./app/tailwind.css -o ./app/output.css",
+    "build:css:watch": "tailwindcss -i ./app/tailwind.css -o ./app/output.css --watch",
+    "dev": "remix dev",
+    "build": "remix build",
+    "start": "remix serve build"
   },
   "keywords": [
     "ai",
@@ -45,7 +50,7 @@
     "nodemon": "^3.1.10",
     "postcss": "^8.5.6",
     "supertest": "^7.1.4",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
