--- a/ai-snippet-service/package.json
+++ b/ai-snippet-service/package.json
@@ -1,14 +1,26 @@
 {
   "name": "ai-snippet-service",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/src/server.js",
+  "description": "AI-powered snippet summary service with Express backend and Remix frontend",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build:css": "tailwindcss -i ./app/tailwind.css -o ./app/output.css",
-    "build:css:watch": "tailwindcss -i ./app/tailwind.css -o ./app/output.css --watch",
-    "dev": "remix dev",
-    "build": "remix build",
-    "start": "remix serve build"
+   "dev": "concurrently \"npm run dev:api\" \"npm run dev:ui\"",
+    "dev:api": "nodemon --exec ts-node src/server.ts",
+    "dev:ui": "remix dev --port 3030",
+    "build": "npm run build:api && npm run build:ui",
+    "build:api": "tsc",
+    "build:ui": "remix build",
+    "start": "concurrently \"npm run start:api\" \"npm run start:ui\"",
+    "start:api": "node dist/src/server.js",
+    "start:ui": "remix-serve build --port 3030",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint src app --ext .ts,.tsx --fix",
+    "type-check": "tsc --noEmit",
+    "docker:dev": "./scripts/docker-dev.sh",
+    "docker:test": "./scripts/test.sh",
+    "docker:build": "./scripts/build.sh"
   },
   "keywords": [
     "ai",
@@ -19,7 +31,6 @@
   ],
   "author": "Glaucia Lemos <Twitter: glaucia_lemos86>",
   "license": "MIT",
-  "description": "A snippet service with Remix and OpenAI",
   "dependencies": {
     "@remix-run/dev": "^2.17.0",
     "@remix-run/node": "^2.17.0",
@@ -32,8 +43,8 @@
     "mongoose": "^8.17.0",
     "morgan": "^1.10.1",
     "openai": "^5.11.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
@@ -53,5 +64,9 @@
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
+  },
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
   }
 }
