--- a/ai-snippet-service/package.json
+++ b/ai-snippet-service/package.json
@@ -4,7 +4,7 @@
   "main": "dist/src/server.js",
   "description": "AI-powered snippet summary service with Express backend and Remix frontend",
   "scripts": {
-   "dev": "concurrently \"npm run dev:api\" \"npm run dev:ui\"",
+    "dev": "concurrently \"npm run dev:api\" \"npm run dev:ui\"",
     "dev:api": "nodemon --exec ts-node src/server.ts",
     "dev:ui": "remix dev --port 3030",
     "build": "npm run build:api && npm run build:ui",
@@ -52,12 +52,14 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
+    "@types/mongodb-memory-server": "^1.8.0",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.1.0",
     "@types/supertest": "^6.0.3",
     "autoprefixer": "^10.4.21",
     "concurrently": "^9.2.0",
     "jest": "^30.0.5",
+    "mongodb-memory-server": "^10.2.0",
     "nodemon": "^3.1.10",
     "postcss": "^8.5.6",
     "supertest": "^7.1.4",
