feat: update TypeScript configuration to include DOM libraries and additional compiler options

--- a/ai-snippet-service/tsconfig.json
+++ b/ai-snippet-service/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2022",
     "module": "commonjs",
-    "lib": ["ES2022"],
+    "lib": ["DOM", "DOM.Iterable", "ES2022"],
     "outDir": "./dist",
     "rootDir": "./",
     "strict": true,
@@ -13,9 +13,19 @@
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "types": ["node", "jest"]
+    "jsx": "react-jsx",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "baseUrl": ".",
+    "paths": {
+      "~/*": ["./app/*"]
+    },
+    "types": ["node", "jest", "@remix-run/node"]
   },
   "include": [
+    "remix.env.d.ts",
     "src/**/*",
     "app/**/*"
   ],
