feat: add isbot and TypeScript types for React and ReactDOM

--- a/ai-snippet-service/package.json
+++ b/ai-snippet-service/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "isbot": "^4",
     "mongoose": "^8.17.0",
     "morgan": "^1.10.1",
     "openai": "^5.11.0",
@@ -55,6 +56,8 @@
     "@types/mongodb-memory-server": "^1.8.0",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.1.0",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
     "@types/supertest": "^6.0.3",
     "autoprefixer": "^10.4.21",
     "concurrently": "^9.2.0",
