fix: update Dockerfiles to ensure correct dependency installation and health check configurations

--- a/ai-snippet-service/Dockerfile.api
+++ b/ai-snippet-service/Dockerfile.api
@@ -10,15 +10,15 @@ WORKDIR /app
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm ci --only=production && npm cache clean --force
+# Install all dependencies (including dev dependencies for build)
+RUN npm ci
 
 # Copy source code
 COPY src/ ./src/
 COPY tsconfig.json ./
 
-# Install development dependencies for build
-RUN npm ci && npm run build:api
+# Build the application
+RUN npm run build:api
 
 # Remove dev dependencies
 RUN npm prune --production
@@ -44,11 +44,11 @@ COPY --from=base --chown=nextjs:nodejs /app/package.json ./package.json
 USER nextjs
 
 # Expose port
-EXPOSE 3000
+EXPOSE 3001
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD node -e "require('http').get('http://localhost:3000/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })"
+  CMD node -e "require('http').get('http://localhost:3001/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })"
 
 # Start the application
 ENTRYPOINT ["dumb-init", "--"]
