fix: update tsconfig to allow emitting output files

--- a/ai-snippet-service/tsconfig.json
+++ b/ai-snippet-service/tsconfig.json
@@ -17,7 +17,7 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "isolatedModules": true,
-    "noEmit": true,
+    "noEmit": false,
     "baseUrl": ".",
     "paths": {
       "~/*": ["./app/*"]
